--- a/index.html
+++ b/index.html
@@ -4,148 +4,178 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <link rel="stylesheet" href="CSS/index.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
 
 <body>
-<header>
-    <div class="container_nav">
-        <p>MoGo</p>
+<section class="header">
+
+    <div class="navigation _container">
+        <div class="logo"><span>MoGo</span></div>
         <ul class="nav">
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SERVICE</a></li>
-                <li><a href="#">WORK</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><i class="fas fa-search"></i></li>
-                <li><i class="fas fa-shopping-cart"></i></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">SERVICE</a></li>
+            <li><a href="#">WORK</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><i class="fas fa-shopping-cart"></i></li>
+            <li><i class="fas fa-search"></i></li>
         </ul>
     </div>
 
-    <div class="container_mogo">
+    <div class="mogo _container">
         <h2>Creative Template</h2>
         <h1>WELCOME<br>TO MOGO</h1>
-        <div class="button"><button>LEARN MORE</button></div>
+        <div class="button">
+            <button>LEARN MORE</button>
+        </div>
     </div>
-</header>
+</section>
 
 <section class="main">
 
-    <div class="about">
-        <div class="container_about">
-            <h4>What we do</h4>
-            <h3>STORY ABOUT US</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    <div class="img">
-        <div class="container">
-                    <img class="table" alt="стол 1" src="./img/куб%203.jpg">
-                    <img class="table" alt="стол 2" src="./img/куб.jpg">
-                    <img class="table" alt="стол 3" src="./img/куб%202.jpg">
+    <div class="about _container">
+        <h4>What we do</h4>
+        <h3>STORY ABOUT US</h3>
+        <p class="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et
+            dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.</p>
+        <div class="img">
+            <img class="table" alt="стол 1" src="./img/куб%203.jpg">
+            <img class="table" alt="стол 2" src="./img/куб.jpg">
+            <img class="table" alt="стол 3" src="./img/куб%202.jpg">
         </div>
     </div>
-    </div>
-    </div>
-    <div class="statistics">
-        <div class="container_statistic">
-            <div class="slot">
-                <h2>42</h2>
+    <div class="statistic">
+        <div class="stat _container">
+            <div class="slots">
+                <div class="slot">
+                    <span>42</span>
                     <p>WEB DESING PROJECTS</p>
-            </div>
-            <div class="slot">
-                <h2>123</h2>
-                <p>HAPPY CLIENT</p>
-            </div>
-            <div class="slot">
-                <h2>15</h2>
-                <p>AWARD WINNER</p>
-            </div>
-            <div class="slot">
-                <h2>99</h2>
-                <p>CUP OF COFFEE</p>
-            </div>
-            <div class="slot">
-                <h2>24</h2>
-                <p>MEMBERS</p>
+                </div>
+                <div class="slot">
+                    <span>123</span>
+                    <p>HAPPY CLIENT</p>
+                </div>
+                <div class="slot">
+                    <span>15</span>
+                    <p>AWARD WINNER</p>
+                </div>
+                <div class="slot">
+                    <span>99</span>
+                    <p>CUP OF COFFEE</p>
+                </div>
+                <div class="slot">
+                    <span>24</span>
+                    <p>MEMBERS</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="amazing">
-            <div class="container_amazing">
-                <h4>We work with</h4>
-                <h3>AMAZING SERVIES</h3>
-            </div>
-        <div class="container_list">
-            <div class="list">
-                <div class="block">
-                    <img src="./img/ALARM.png">
-                    <h5>PHOTOGRAPHY</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    <img src="./img/LINE%20GRAPH.png">
-                    <h5>WEB DESIGN</h5>
-                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </div>
-                <div class="block">
-                    <img src="./img/COMPUTER.png">
-                    <h5>CREATIVITY</h5>
-                    <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                    <img src="./img/BOOK%202.png">
-                    <h5>SEO</h5>
-                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                </div>
-                <div class="block">
-                    <img src="./img/HOME.png">
-                    <h5>CSS/HTML</h5>
-                    <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
-                    <img src="./img/IMAGE.png">
-                    <h5>DIGITAL</h5>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </div>
-            </div>
-            </div>
+
+    <div class="amazing _container">
+        <h4>We work with</h4>
+        <h3>AMAZING SERVIES</h3>
+    </div>
+    <div class="list _container">
+        <div class="block">
+            <img alt="ALARM" src="./img/ALARM.png">
+            <h5>PHOTOGRAPHY</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+        </div>
+        <div class="block">
+            <img alt="LINE" src="./img/LINE%20GRAPH.png">
+            <h5>WEB DESIGN</h5>
+            <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+        </div>
+        <div class="block">
+            <img alt="COMPUTER" src="./img/COMPUTER.png">
+            <h5>CREATIVITY</h5>
+            <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+        </div>
+        <div class="block">
+            <img alt="BOOK" src="./img/BOOK%202.png">
+            <h5>SEO</h5>
+            <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+        </div>
+        <div class="block">
+            <img alt="HOME" src="./img/HOME.png">
+            <h5>CSS/HTML</h5>
+            <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+        </div>
+        <div class="block">
+            <img alt="IMAGE" src="./img/IMAGE.png">
+            <h5>DIGITAL</h5>
+            <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+        </div>
     </div>
 
     <div class="desing">
-        <img class="tablet" src="./img/display.png" alt="tablet">
-        <img class="mobile" src="./img/White.png" alt="mobile">
-        <div class="container_desing">
+        <div class="device">
             <h4>For all devices</h4>
             <h3>UNIQE DESING</h3>
+            <img class="tablet" src="./img/display.png" alt="tablet">
+            <img class="mobile" src="./img/White.png" alt="mobile">
+        </div>
+    </div>
 
+    <div class="service _container">
+        <h4>Service</h4>
+        <h3>WANT WE DO</h3>
+        <p class="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.</p>
+
+        <div class="img_service">
+            <img alt="Rectangle" src="./img/Rectangle%208.png">
         </div>
+        <ul class="activList">
+            <li>
+                <h5><img alt='photography' src="./img/photography.png">PHOTOGRAPHY</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </li>
+            <li>
+                <h5><img alt='EQUALIZER' src="./img/EQUALIZER.png">CREATIVITY</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </li>
+            <li>
+                <h5><img alt='BULLSEYE' src="./img/BULLSEYE.png">WEB DESIGN</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </li>
+        </ul>
     </div>
-    <div class="service">
-            <h4>Service</h4>
-            <h3>WANT WE DO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <div class="container_service">
-            <div class="img_service">
-                <img src="./img/Rectangle%208.png">
-            </div>
-            <ul class="activList">
-                <li>
-                    <h5><img src="./img/photography.png">PHOTOGRAPHY</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <li>
-                    <h5><img src="./img/EQUALIZER.png">CREATIVITY</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <li>
-                    <h5><img src="./img/BULLSEYE.png">WEB DESIGN</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </ul>
-        </div>
-    </div>
-    <div class="team">
-        <div class="container_team">
+
+    <div class="team _container">
         <h4>Who we are</h4>
         <h3>MEET OUR TEAM</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <img class="professional" src="./img/Rect.png">
-        <img class="professional" src="./img/Rect2.png">
-        <img class="professional" src="./img/Rect3.png">
+        <p class="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et
+            dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. </p>
+        <img alt='Rect' class="professional" src="./img/Rect.png">
+        <img alt='Rect2' class="professional" src="./img/Rect2.png">
+        <img alt='Rect3' class="professional" src="./img/Rect3.png">
     </div>
-    <div class="container_proff">
+    <div class="proff _container">
         <h5>MATTHEW DIX</h5>
         <h5>CRISTOPHER CAMPBELL</h5>
         <h5>MICHAEL FERTIG</h5>
@@ -153,10 +183,7 @@
         <p>Branding/UX design</p>
         <p>Developer</p>
     </div>
-    </div>
 </section>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+
+
 </html>
