refactor: add section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="about _container">
         <h4>What we do</h4>
         <h3>STORY ABOUT US</h3>
-        <p class="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et
             dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.</p>
@@ -115,24 +115,26 @@
         </div>
     </div>
 
-    <div class="desing">
-        <div class="device">
-            <h4>For all devices</h4>
-            <h3>UNIQE DESING</h3>
-            <img class="tablet" src="./img/display.png" alt="tablet">
-            <img class="mobile" src="./img/White.png" alt="mobile">
+    <section class="desing">
+        <div class="_container">
+            <div class="device">
+                <h4>For all devices</h4>
+                <h3>UNIQE DESING</h3>
+                <img class="tablet" src="./img/display.png" alt="tablet">
+                <img class="mobile" src="./img/White.png" alt="mobile">
+            </div>
         </div>
-    </div>
+    </section>
 
     <div class="_container">
         <h4>Service</h4>
         <h3>WANT WE DO</h3>
-        <p class="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et
             dolore
             magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat.</p>
-        <div class="service">
+        <div class="service _container">
             <div class="img_service">
                 <img alt="Rectangle" src="./img/Rectangle%208.png">
             </div>
@@ -168,21 +170,27 @@
     <div class="team _container">
         <h4>Who we are</h4>
         <h3>MEET OUR TEAM</h3>
-        <p class="discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et
             dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat. </p>
-        <img alt='Rect' class="professional" src="./img/Rect.png">
-        <img alt='Rect2' class="professional" src="./img/Rect2.png">
-        <img alt='Rect3' class="professional" src="./img/Rect3.png">
-    </div>
-    <div class="proff _container">
-        <h5>MATTHEW DIX</h5>
-        <h5>CRISTOPHER CAMPBELL</h5>
-        <h5>MICHAEL FERTIG</h5>
-        <p>Graphic Design</p>
-        <p>Branding/UX design</p>
-        <p>Developer</p>
+        <div class="board _container">
+            <div class="item_1">
+                <img alt='Rect' class="professional" src="./img/Rect.png">
+                <h5 class="name">matthew dix</h5>
+                <p class="position">Graphic Design</p>
+            </div>
+            <div class="item_2">
+                <img alt='Rect2' class="professional" src="./img/Rect2.png">
+                <h5 class="name">cristopher canpbell</h5>
+                <p class="position">Branding/UX design</p>
+            </div>
+            <div class="item_3">
+                <img alt='Rect3' class="professional" src="./img/Rect3.png">
+                <h5 class="name">michael fertig</h5>
+                <p class="position">Developer</p>
+            </div>
+        </div>
     </div>
 </section>
 
