refactor: add section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <h4>What we do</h4>
         <h3>STORY ABOUT US</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et
-            dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut
+            ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
+            nisi ut
             aliquip ex ea commodo consequat.</p>
         <div class="img">
             <img class="table" alt="стол 1" src="./img/куб%203.jpg">
@@ -80,36 +80,36 @@
 
     <div class="amazing _container">
         <h4>We work with</h4>
-        <h3>AMAZING SERVIES</h3>
+        <h3>AMAZING SERVICES</h3>
     </div>
     <div class="list _container">
         <div class="block">
-            <img alt="ALARM" src="./img/ALARM.png">
+            <img alt="ALARM" src="./img/service/ALARM.png">
             <h5>PHOTOGRAPHY</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
         </div>
         <div class="block">
-            <img alt="LINE" src="./img/LINE%20GRAPH.png">
+            <img alt="LINE" src="./img/service/LINE%20GRAPH.png">
             <h5>WEB DESIGN</h5>
             <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
         </div>
         <div class="block">
-            <img alt="COMPUTER" src="./img/COMPUTER.png">
+            <img alt="COMPUTER" src="./img/service/COMPUTER.png">
             <h5>CREATIVITY</h5>
             <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
         </div>
         <div class="block">
-            <img alt="BOOK" src="./img/BOOK%202.png">
+            <img alt="BOOK" src="./img/service/BOOK%202.png">
             <h5>SEO</h5>
             <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
         </div>
         <div class="block">
-            <img alt="HOME" src="./img/HOME.png">
+            <img alt="HOME" src="./img/service/HOME.png">
             <h5>CSS/HTML</h5>
             <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
         </div>
         <div class="block">
-            <img alt="IMAGE" src="./img/IMAGE.png">
+            <img alt="IMAGE" src="./img/service/IMAGE.png">
             <h5>DIGITAL</h5>
             <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
         </div>
@@ -130,9 +130,8 @@
         <h4>Service</h4>
         <h3>WANT WE DO</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et
-            dolore
-            magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex
             ea commodo consequat.</p>
         <div class="service _container">
             <div class="img_service">
@@ -140,7 +139,7 @@
             </div>
             <ul class="serviceList">
                 <li>
-                    <h5><img alt='photography' src="./img/photography.png">PHOTOGRAPHY</h5>
+                    <h5><img alt='photography' src="./img/service/photography.png">PHOTOGRAPHY</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -148,7 +147,7 @@
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </li>
                 <li>
-                    <h5><img alt='EQUALIZER' src="./img/EQUALIZER.png">CREATIVITY</h5>
+                    <h5><img alt='EQUALIZER' src="./img/service/EQUALIZER.png">CREATIVITY</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -156,7 +155,7 @@
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </li>
                 <li>
-                    <h5><img alt='BULLSEYE' src="./img/BULLSEYE.png">WEB DESIGN</h5>
+                    <h5><img alt='BULLSEYE' src="./img/service/BULLSEYE.png">WEB DESIGN</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -171,8 +170,8 @@
         <h4>Who we are</h4>
         <h3>MEET OUR TEAM</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et
-            dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris nisi ut
+            ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
+            nisi ut
             aliquip ex ea commodo consequat. </p>
         <div class="board _container">
             <div class="item_1">
@@ -192,6 +191,106 @@
             </div>
         </div>
     </div>
+    <div class="labels">
+        <div class="label _container">
+            <div class="labs">
+                <div class="lab">
+                    <img alt="label-1" src="./img/labels/h-1.png">
+                </div>
+                <div class="lab">
+                    <img alt="label-2" src="./img/labels/h-2.png">
+                </div>
+                <div class="lab">
+                    <img alt="label-3" src="./img/labels/h-3.png">
+                </div>
+                <div class="lab">
+                    <img alt="label-4" src="./img/labels/h-4.png">
+                </div>
+                <div class="lab">
+                    <img alt="label-5" src="./img/labels/h-5.png">
+                </div>
+                <div class="lab">
+                    <img alt="label-6" src="./img/labels/h-6.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="ourWork _container">
+        <h4>What we do</h4>
+        <h3>SOME OUR WORK</h3>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
+            nisi ut
+            aliquip ex ea commodo consequat.</p>
+    </div>
+    <div class="bar">
+        <div class="col">
+            <div class="item">
+                <img src="./img/bar/work-1.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./img/bar/work-2.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="item">
+                <img src="./img/bar/work-3.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./img/bar/work-4.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="item">
+                <img src="./img/bar/work-5.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="item">
+                <img src="./img/bar/work-6.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./img/bar/work-7.png">
+                <div class="barinfo">
+                    <img src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 
