fixed: bar perfomance

--- a/index.html
+++ b/index.html
@@ -290,6 +290,42 @@
             </div>
         </div>
     </div>
+    <section class="reviews">
+    <div class="_container">
+        <h4>Happy Clients</h4>
+        <h3>WHAT PEOPLE SAY</h3>
+    </div>
+    <div class="clients _container">
+        <div class="client">
+            <img alt="user" src="./img/users/user-1.png">
+            <h5 class="name">Nick Karvounis</h5>
+            <p class="position _rew">Graphic Design</p>
+            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="client">
+            <img alt="user" src="./img/users/user-2.png">
+            <h5 class="name">Jaelynn Castillo</h5>
+            <p class="position _rew">Graphic Design</p>
+            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="client">
+            <img alt="user" src="./img/users/user-3.png">
+            <h5 class="name">Mike Petrucci</h5>
+            <p class="position _rew">Graphic Design</p>
+            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="client">
+            <img alt="user" src="./img/users/user-4.png">
+            <h5 class="name">Matthew Dix</h5>
+            <p class="position _rew">Graphic Design</p>
+            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.</p>
+        </div>
+    </div>
+    </section>
 
 </section>
 
