--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <h3>STORY ABOUT US</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
-            nisi ut
-            aliquip ex ea commodo consequat.</p>
+            nisi ut aliquip ex ea commodo consequat.</p>
         <div class="img">
             <img class="table" alt="стол 1" src="./img/куб%203.jpg">
             <img class="table" alt="стол 2" src="./img/куб.jpg">
@@ -131,15 +130,14 @@
         <h3>WANT WE DO</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex
-            ea commodo consequat.</p>
+            nisi ut aliquip ex ea commodo consequat.</p>
         <div class="service _container">
             <div class="img_service">
                 <img alt="Rectangle" src="./img/Rectangle%208.png">
             </div>
             <ul class="serviceList">
                 <li>
-                    <h5><img alt='photography' src="./img/service/photography.png">PHOTOGRAPHY</h5>
+                    <h5><img alt='photography' src="./img/service/photography.png"> PHOTOGRAPHY</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -147,7 +145,7 @@
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </li>
                 <li>
-                    <h5><img alt='EQUALIZER' src="./img/service/EQUALIZER.png">CREATIVITY</h5>
+                    <h5><img alt='EQUALIZER' src="./img/service/EQUALIZER.png"> CREATIVITY</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -155,7 +153,7 @@
                         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </li>
                 <li>
-                    <h5><img alt='BULLSEYE' src="./img/service/BULLSEYE.png">WEB DESIGN</h5>
+                    <h5><img alt='BULLSEYE' src="./img/service/BULLSEYE.png"> WEB DESIGN</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -171,8 +169,7 @@
         <h3>MEET OUR TEAM</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
-            nisi ut
-            aliquip ex ea commodo consequat. </p>
+            nisi ut aliquip ex ea commodo consequat. </p>
         <div class="board _container">
             <div class="item_1">
                 <img alt='Rect' class="professional" src="./img/Rect.png">
@@ -220,23 +217,22 @@
         <h3>SOME OUR WORK</h3>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim <br>veniam, quis nostrud exercitation ullamco laboris
-            nisi ut
-            aliquip ex ea commodo consequat.</p>
+            nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <div class="bar">
         <div class="col">
             <div class="item">
-                <img src="./img/bar/work-1.png">
+                <img alt="#" src="./img/bar/work-1.png">
                 <div class="barinfo">
-                    <img src="./img/service/photography.png">
+                    <img alt="#" src="./img/service/photography.png">
                     <div class="title">CREATIVELY DESIGNED</div>
                     <p class="text">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
             <div class="item">
-                <img src="./img/bar/work-2.png">
+                <img alt="#" src="./img/bar/work-2.png">
                 <div class="barinfo">
-                    <img src="./img/service/photography.png">
+                    <img alt="#" src="./img/service/photography.png">
                     <div class="title">CREATIVELY DESIGNED</div>
                     <p class="text">Lorem ipsum dolor sit amet</p>
                 </div>
@@ -245,27 +241,17 @@
 
         <div class="col">
             <div class="item">
-                <img src="./img/bar/work-3.png">
+                <img alt="#" src="./img/bar/work-3.png">
                 <div class="barinfo">
-                    <img src="./img/service/photography.png">
+                    <img alt="#" src="./img/service/photography.png">
                     <div class="title">CREATIVELY DESIGNED</div>
                     <p class="text">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
             <div class="item">
-                <img src="./img/bar/work-4.png">
+                <img alt="#" src="./img/bar/work-4.png">
                 <div class="barinfo">
-                    <img src="./img/service/photography.png">
-                    <div class="title">CREATIVELY DESIGNED</div>
-                    <p class="text">Lorem ipsum dolor sit amet</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="item">
-                <img src="./img/bar/work-5.png">
-                <div class="barinfo">
-                    <img src="./img/service/photography.png">
+                    <img alt="#" src="./img/service/photography.png">
                     <div class="title">CREATIVELY DESIGNED</div>
                     <p class="text">Lorem ipsum dolor sit amet</p>
                 </div>
@@ -273,17 +259,27 @@
         </div>
         <div class="col">
             <div class="item">
-                <img src="./img/bar/work-6.png">
+                <img alt="#" src="./img/bar/work-5.png">
                 <div class="barinfo">
-                    <img src="./img/service/photography.png">
+                    <img alt="#" src="./img/service/photography.png">
+                    <div class="title">CREATIVELY DESIGNED</div>
+                    <p class="text">Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="item">
+                <img alt="#" src="./img/bar/work-6.png">
+                <div class="barinfo">
+                    <img alt="#" src="./img/service/photography.png">
                     <div class="title">CREATIVELY DESIGNED</div>
                     <p class="text">Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
             <div class="item">
-                <img src="./img/bar/work-7.png">
+                <img alt="#" src="./img/bar/work-7.png">
                 <div class="barinfo">
-                    <img src="./img/service/photography.png">
+                    <img alt="#" src="./img/service/photography.png">
                     <div class="title">CREATIVELY DESIGNED</div>
                     <p class="text">Lorem ipsum dolor sit amet</p>
                 </div>
@@ -291,43 +287,108 @@
         </div>
     </div>
     <section class="reviews">
-    <div class="_container">
-        <h4>Happy Clients</h4>
-        <h3>WHAT PEOPLE SAY</h3>
-    </div>
-    <div class="clients _container">
-        <div class="client">
-            <img alt="user" src="./img/users/user-1.png">
-            <h5 class="name">Nick Karvounis</h5>
-            <p class="position _rew">Graphic Design</p>
-            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua.</p>
+        <div class="_container">
+            <h4>Happy Clients</h4>
+            <h3>WHAT PEOPLE SAY</h3>
         </div>
-        <div class="client">
-            <img alt="user" src="./img/users/user-2.png">
-            <h5 class="name">Jaelynn Castillo</h5>
-            <p class="position _rew">Graphic Design</p>
-            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua.</p>
+        <div class="clients _container">
+            <div class="client">
+                <img alt="user" src="./img/users/user-1.png">
+                <h5 class="name">Nick Karvounis</h5>
+                <p class="position _rew">Graphic Design</p>
+                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="client">
+                <img alt="user" src="./img/users/user-2.png">
+                <h5 class="name">Jaelynn Castillo</h5>
+                <p class="position _rew">Graphic Design</p>
+                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="client">
+                <img alt="user" src="./img/users/user-3.png">
+                <h5 class="name">Mike Petrucci</h5>
+                <p class="position _rew">Graphic Design</p>
+                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="client">
+                <img alt="user" src="./img/users/user-4.png">
+                <h5 class="name">Matthew Dix</h5>
+                <p class="position _rew">Graphic Design</p>
+                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua.</p>
+            </div>
         </div>
-        <div class="client">
-            <img alt="user" src="./img/users/user-3.png">
-            <h5 class="name">Mike Petrucci</h5>
-            <p class="position _rew">Graphic Design</p>
-            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="client">
-            <img alt="user" src="./img/users/user-4.png">
-            <h5 class="name">Matthew Dix</h5>
-            <p class="position _rew">Graphic Design</p>
-            <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua.</p>
-        </div>
-    </div>
     </section>
-
+    <div class="stories _container">
+        <h4>Our stories</h4>
+        <h3>LATEST BLOG</h3>
+    </div>
+    <div class="blogs _container">
+        <div class="blog">
+            <div class="head"><a href="#"><img alt="blog" src="img/blogs/blog-1.png"></a></div>
+            <div class="date">
+                <div class="num">27</div>
+                Feb
+            </div>
+            <div class="content">
+                <h5 class="name">Lorem ipsum dolor sit amet</h5>
+                <p class="position _blog">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.</p>
+            </div>
+            <div class="reaction">
+                <div class="views"><i class="far fa-eye"> 200</i></div>
+                <div class="comments"><i class="far fa-comment-dots"> 17</i></div>
+            </div>
+        </div>
+        <div class="blog">
+            <div class="head"><a href="#"><img alt="blog" src="img/blogs/blog-2.png"></a></div>
+            <div class="date">
+                <div class="num">15</div>
+                Jun
+            </div>
+            <div class="content">
+                <div><h5 class="name">Lorem ipsum dolor sit amet</h5></div>
+                <p class="position _blog">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.</p>
+            </div>
+            <div class="reaction">
+                <div class="views"><i class="far fa-eye"> 517</i></div>
+                <div class="comments"><i class="far fa-comment-dots"> 73</i></div>
+            </div>
+        </div>
+        <div class="blog">
+            <div class="head"><a href="#"><img alt="blog" src="img/blogs/blog-3.png"></a></div>
+            <div class="date">
+                <div class="num">04</div>
+                Dec
+            </div>
+            <div class="content">
+                <h5 class="name">Lorem ipsum dolor sit amet</h5>
+                <p class="position _blog">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.</p>
+            </div>
+            <div class="reaction">
+                <div class="views"><i class="far fa-eye"> 376</i></div>
+                <div class="comments"><i class="far fa-comment-dots"> 6</i></div>
+            </div>
+        </div>
+    </div>
+    <div class="location">
+        <div class="map">
+            <div class="pointer"><i class="fas fa-map-marker-alt"></i></div>
+            <h3><a href="https://www.google.com/maps/?hl=RU">OPEN MAP</a></h3>
+        </div>
+    </div>
 </section>
+<section class="footer">
+    <div class="_container">
 
-
-</html>
+    </div>
+</section>
