refactor: add decoration

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 <section class="header">
-
     <div class="navigation _container">
         <div class="logo"><span>MoGo</span></div>
         <ul class="nav">
@@ -26,18 +25,14 @@
             <li><i class="fas fa-search"></i></li>
         </ul>
     </div>
-
     <div class="mogo _container">
         <h2>Creative Template</h2>
         <h1>WELCOME<br>TO MOGO</h1>
-        <div class="button">
-            <button>LEARN MORE</button>
-        </div>
+        <button class="learn">LEARN MORE</button>
     </div>
 </section>
 
 <section class="main">
-
     <div class="about _container">
         <h4>What we do</h4>
         <h3>STORY ABOUT US</h3>
@@ -76,7 +71,6 @@
             </div>
         </div>
     </div>
-
     <div class="amazing _container">
         <h4>We work with</h4>
         <h3>AMAZING SERVICES</h3>
@@ -113,7 +107,6 @@
             <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
         </div>
     </div>
-
     <section class="desing">
         <div class="_container">
             <div class="device">
@@ -124,7 +117,6 @@
             </div>
         </div>
     </section>
-
     <div class="_container">
         <h4>Service</h4>
         <h3>WANT WE DO</h3>
@@ -163,7 +155,6 @@
             </ul>
         </div>
     </div>
-
     <div class="team _container">
         <h4>Who we are</h4>
         <h3>MEET OUR TEAM</h3>
@@ -238,7 +229,6 @@
                 </div>
             </div>
         </div>
-
         <div class="col">
             <div class="item">
                 <img alt="#" src="./img/bar/work-3.png">
@@ -389,6 +379,51 @@
 </section>
 <section class="footer">
     <div class="_container">
-
+        <div class="footer_row_1">
+            <div class="footer_col">
+                <div class="footer_logo">MoGo</div>
+                <div><p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
+                <div class="footer_followers"><span class="amount">15k</span> followers</div>
+                <div class="socialNetwork">
+                    <p class="follow">Follow Us:</p>
+                    <div><i class="fab fa-facebook-f"></i></div>
+                    <div><i class="fab fa-twitter"></i></div>
+                    <div><i class="fab fa-instagram"></i></div>
+                    <div><i class="fab fa-pinterest"></i></div>
+                    <div><i class="fab fa-google-plus-g"></i></div>
+                    <div><i class="fab fa-youtube"></i></div>
+                </div>
+                <div class="mail">
+                    <input placeholder="Your Email..." class="email" type="email">
+                    <button class="subscribe">subscribe</button>
+                </div>
+            </div>
+            <div class="footer_col"><h5>BLOGS</h5>
+                <div class="records">
+                    <div class="record">
+                        <div class=""><img src="img/records/record_1.png"></div>
+                        <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                        <p class="footer_date">Jan 9, 2016</p>
+                    </div>
+                    <div class="record">
+                        <div class=""><img src="img/records/record_2.png"></div>
+                        <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                        <p class="footer_date">Jan 9, 2016</p>
+                    </div>
+                    <div class="record">
+                        <div class=""><img src="img/records/record_3.png"></div>
+                        <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                        <p class="footer_date">Jan 9, 2016</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_col"><h5>INSTAGRAM</h5></div>
+        </div>
+        <div class="footer_row_2">
+            <p class="designer">2021 MoGo free PSD template by Laaqiq</p>
+            <p class="author">coded by <a href="https://github.com/KonstantinPogosskiy">KonstantinPogosskiy</a></p>
+        </div>
     </div>
 </section>
