refactor: add social

--- a/index.html
+++ b/index.html
@@ -419,7 +419,19 @@
                     </div>
                 </div>
             </div>
-            <div class="footer_col"><h5>INSTAGRAM</h5></div>
+            <div class="footer_col"><h5>INSTAGRAM</h5>
+                <div class="instagram">
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/1.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/2.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/3.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/4.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/5.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/6.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/7.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/8.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/9.png"></a>
+                </div>
+            </div>
         </div>
         <div class="footer_row_2">
             <p class="designer">2021 MoGo free PSD template by Laaqiq</p>
