refactor: add hovers

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="slots">
                 <div class="slot">
                     <span>42</span>
-                    <p>WEB DESING PROJECTS</p>
+                    <p>WEB DESIGN PROJECTS</p>
                 </div>
                 <div class="slot">
                     <span>123</span>
@@ -107,11 +107,11 @@
             <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
         </div>
     </div>
-    <section class="desing">
+    <section class="design">
         <div class="_container">
             <div class="device">
                 <h4>For all devices</h4>
-                <h3>UNIQE DESING</h3>
+                <h3>UNIQE DESIGN</h3>
                 <img class="tablet" src="./img/display.png" alt="tablet">
                 <img class="mobile" src="./img/White.png" alt="mobile">
             </div>
@@ -284,35 +284,39 @@
         <div class="clients _container">
             <div class="client">
                 <img alt="user" src="./img/users/user-1.png">
-                <h5 class="name">Nick Karvounis</h5>
-                <p class="position _rew">Graphic Design</p>
-                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt
-                    ut labore et dolore magna aliqua.</p>
+                <div class="user">
+                    <h5 class="name">Nick Karvounis</h5>
+                    <p class="position _rew">Graphic Design</p>
+                    <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                </div>
             </div>
             <div class="client">
                 <img alt="user" src="./img/users/user-2.png">
-                <h5 class="name">Jaelynn Castillo</h5>
-                <p class="position _rew">Graphic Design</p>
-                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt
-                    ut labore et dolore magna aliqua.</p>
+                <div class="user">
+                    <h5 class="name">Jaelynn Castillo</h5>
+                    <p class="position _rew">Graphic Design</p>
+                    <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                </div>
             </div>
             <div class="client">
                 <img alt="user" src="./img/users/user-3.png">
-                <h5 class="name">Mike Petrucci</h5>
-                <p class="position _rew">Graphic Design</p>
-                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt
-                    ut labore et dolore magna aliqua.</p>
+                <div class="user">
+                    <h5 class="name">Mike Petrucci</h5>
+                    <p class="position _rew">Graphic Design</p>
+                    <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                </div>
             </div>
             <div class="client">
                 <img alt="user" src="./img/users/user-4.png">
-                <h5 class="name">Matthew Dix</h5>
-                <p class="position _rew">Graphic Design</p>
-                <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt
-                    ut labore et dolore magna aliqua.</p>
+                <div class="user">
+                    <h5 class="name">Matthew Dix</h5>
+                    <p class="position _rew">Graphic Design</p>
+                    <p class="position">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -403,33 +407,48 @@
             <div class="footer_col"><h5>BLOGS</h5>
                 <div class="records">
                     <div class="record">
-                        <div class=""><img src="img/records/record_1.png"></div>
-                        <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                        <p class="footer_date">Jan 9, 2016</p>
+                        <img alt='#' src="img/records/record_1.png">
+                        <div class="record_description">
+                            <p class="record_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                            <p class="footer_date">Jan 9, 2016</p>
+                        </div>
                     </div>
                     <div class="record">
-                        <div class=""><img src="img/records/record_2.png"></div>
-                        <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                        <p class="footer_date">Jan 9, 2016</p>
+                        <img alt='#' src="img/records/record_2.png">
+                        <div class="record_description">
+                            <p class="record_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                            <p class="footer_date">Jan 9, 2016</p>
+                        </div>
                     </div>
                     <div class="record">
-                        <div class=""><img src="img/records/record_3.png"></div>
-                        <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                        <p class="footer_date">Jan 9, 2016</p>
+                        <img alt='#' src="img/records/record_3.png">
+                        <div class="record_description">
+                            <p class="record_text">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                            <p class="footer_date">Jan 9, 2016</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="footer_col"><h5>INSTAGRAM</h5>
                 <div class="instagram">
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/1.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/2.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/3.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/4.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/5.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/6.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/7.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/8.png"></a>
-                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram' src="img/instagram/9.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/1.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/2.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/3.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/4.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/5.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/6.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/7.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/8.png"></a>
+                    <a target='blank' href="https://www.instagram.com/pogosskiy_konstantin/?hl=ru"><img alt='instagram'
+                                                                                                        src="img/instagram/9.png"></a>
                 </div>
             </div>
         </div>
