fixed: modify links in head

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <section class="header">
     <div class="navigation _container">
-        <div class="logo"><span>MoGo</span></div>
+        <div class="logo"><a href="#">MoGo</a></div>
         <ul class="nav">
             <li><a href="#">ABOUT</a></li>
             <li><a href="#">SERVICE</a></li>
